# Basic-InferLlamaChat

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: api.py  config.py  deps.py  logger.py  main.py  prompts.py  schemas.py
app/inference/: controller.py  controllers.py  deps.py  model.py  models.py  service.py
app/predict/: controller.py  deps.py  service.py
app/prompts/: __init__.py  custom_system_prompt.md.j2  owm_tool_system_prompt.md.j2
app/templates/: index.html
app/tools/: definitions.py  functions.py
scripts/: inference.py
